# aspect-gazelle

./: MODULE.bazel  go.work  go.work.sum
.github/workflows/: release.yaml
common/: go.mod  go.sum
language/js/: MODULE.bazel  go.mod  go.sum
language/kotlin/: MODULE.bazel  go.mod  go.sum
language/orion/: MODULE.bazel  go.mod  go.sum
runner/: .bazelrc  BUILD.bazel  MODULE.bazel  go.mod  go.sum  runner.go
