module(
    name = "aspect_gazelle_runner",
    compatibility_level = 0,
)

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "aspect_gazelle", version = "0.0.0")
local_path_override(
    module_name = "aspect_gazelle",
    path = "..",
)

bazel_dep(name = "aspect_gazelle_js")
local_path_override(
    module_name = "aspect_gazelle_js",
    path = "../language/js",
)

bazel_dep(name = "aspect_gazelle_kotlin")
local_path_override(
    module_name = "aspect_gazelle_kotlin",
    path = "../language/kotlin",
)

bazel_dep(name = "aspect_gazelle_orion")
local_path_override(
    module_name = "aspect_gazelle_orion",
    path = "../language/orion",
)

bazel_dep(name = "rules_go", version = "0.59.0")  # must match go.mod
bazel_dep(name = "gazelle", version = "0.47.0")  # must match go.mod

# Gazelle languages via bzlmod
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")  # must match go.mod
bazel_dep(name = "gazelle_cc", version = "0.1.0")  # must match go.mod

# Override the gazelle used locally to apply aspect patches
single_version_override(
    module_name = "gazelle",
    patch_strip = 1,
    patches = [
        "//patches:bazelbuild_bazel-gazelle_aspect-cli.patch",
        "//patches:bazelbuild_bazel-gazelle_aspect-watchman.patch",
        "//pkg/git:gazelle-gitignore.patch",
    ],
)

# Go modules
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazelbuild_buildtools", "com_github_engflow_gazelle_cc", "com_github_fatih_color", "com_github_go_git_go_git_v5", "com_github_pmezard_go_difflib", "in_gopkg_yaml_v3", "io_opentelemetry_go_otel", "io_opentelemetry_go_otel_trace", "org_golang_x_term")

####### Dev dependencies ########

# Go SDK version which can only be defined in a root MODULE
go_sdk2 = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk2.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)

# Go module patching. Dev only and must be done manually if this MODULE is consumed elsewhere.
go_deps2 = use_extension("@gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps2.module_override(
    patch_strip = 1,
    patches = [
        "//patches:bazelbuild_bazel-gazelle_aspect-cli.patch",
        "//patches:bazelbuild_bazel-gazelle_aspect-watchman.patch",
        "//pkg/git:gazelle-gitignore.patch",
    ],
    path = "github.com/bazelbuild/bazel-gazelle",
)

# For cgo
include("//:llvm.MODULE.bazel")
